--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
       <nav class="navigation__nav">
         <ul class="navigation__list">
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>About Natours</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Your Benefits</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Popular Tours</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Stories</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Book Now</li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>A Your Benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>A Popular Tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>A Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>A Book Now</a></li>
         </ul>
       </nav>
     </div>
